@@ -5,7 +5,16 @@
 </div>
 <div style="display:table-row; height:70%">
    <h5>Parameter values</h5>
-   <div class="par_values"></div>
+   <table class="par_values">
+      <thead>
+         <tr>
+            <th>Name</th>
+            <th>Value</th>
+         </tr>
+      </thead>
+      <tbody>
+      </tbody>
+   </table>
 </div>
 
 <div class="par_buttons" style="display:table-row; height:15%">
